[gd_scene load_steps=17 format=3 uid="uid://bhstgryexd1qw"]

[ext_resource type="Script" path="res://scenes/spells/rock_throw/rock_throw.gd" id="1_mppd0"]
[ext_resource type="Texture2D" uid="uid://x7x28i06fu18" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_summon_animation1.png" id="2_w6neq"]
[ext_resource type="Texture2D" uid="uid://cphs07782vlas" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_summon_animation2.png" id="3_6dqvv"]
[ext_resource type="Texture2D" uid="uid://s3uubjaxkr7m" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_summon_animation3.png" id="4_534nr"]
[ext_resource type="Texture2D" uid="uid://dwnqdw36dswe1" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_summon_animation4.png" id="5_2ewgj"]
[ext_resource type="Texture2D" uid="uid://cuuq3rrkxfrvm" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_summon_animation5.png" id="6_u0r64"]
[ext_resource type="Texture2D" uid="uid://cl1ba6cnkmjp1" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_summon_animation6.png" id="7_6vuh8"]
[ext_resource type="Texture2D" uid="uid://d3gcq3xoqtfyt" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_summon_animation7.png" id="8_s4pr8"]
[ext_resource type="Texture2D" uid="uid://ol537itfmpmt" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_destroy_animation1.png" id="9_c2rj1"]
[ext_resource type="Texture2D" uid="uid://cq2tq1hnaayri" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_destroy_animation2.png" id="10_sei0s"]
[ext_resource type="Texture2D" uid="uid://dkcs0x7wmxk4h" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_destroy_animation3.png" id="11_n4jaa"]
[ext_resource type="Texture2D" uid="uid://cuded5peekssx" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_destroy_animation4.png" id="12_p2i0q"]
[ext_resource type="Texture2D" uid="uid://c1ig51s65le60" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_destroy_animation5.png" id="13_vti3g"]
[ext_resource type="Texture2D" uid="uid://dhxup1gi66gy7" path="res://assets/art/v1.1 dungeon crawler 16X16 pixel pack/heroes/mage/magic/rock_throw/rock_throw_idle.png" id="14_c23cw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dcd33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w6neq")
}, {
"duration": 1.0,
"texture": ExtResource("3_6dqvv")
}, {
"duration": 1.0,
"texture": ExtResource("4_534nr")
}, {
"duration": 1.0,
"texture": ExtResource("5_2ewgj")
}, {
"duration": 1.0,
"texture": ExtResource("6_u0r64")
}, {
"duration": 1.0,
"texture": ExtResource("7_6vuh8")
}, {
"duration": 1.0,
"texture": ExtResource("8_s4pr8")
}],
"loop": true,
"name": &"channel",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_c2rj1")
}, {
"duration": 1.0,
"texture": ExtResource("10_sei0s")
}, {
"duration": 1.0,
"texture": ExtResource("11_n4jaa")
}, {
"duration": 1.0,
"texture": ExtResource("12_p2i0q")
}, {
"duration": 1.0,
"texture": ExtResource("13_vti3g")
}],
"loop": true,
"name": &"destroy",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_c23cw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7rgkg"]
height = 20.0

[node name="RockProjectile" type="Area2D" groups=["spell"]]
collision_layer = 64
collision_mask = 3
script = ExtResource("1_mppd0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dcd33")
animation = &"channel"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7rgkg")
disabled = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ChannelTimer" type="Timer" parent="."]
wait_time = 0.45
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="ChannelTimer" to="." method="_on_summon_timer_timeout"]
[connection signal="timeout" from="ChannelTimer" to="." method="_on_charge_timer_timeout"]
